chore(docker): env file update (#151)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -33,7 +33,7 @@ REDIS_PORT=6379
 
 ###> EMSCommonBundle ###
 EMS_ELASTICSEARCH_HOSTS='["http://localhost:9200"]'
-EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9099","use_path_style_endpoint":true}}]'
+EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
 EMS_CACHE=file_system
 EMS_CACHE_PREFIX=''
 EMS_METRIC_ENABLED=false
@@ -44,13 +44,15 @@ EMS_METRIC_HOST=''
 #EMS_BACKEND_API_KEY=''
 ###< EMSCommonBundle ###
 
-###> EMSCommonBundle ###
+###> EMSClientHelperBundle ###
 EMSCH_LOCALES='["en","fr","nl"]'
 #EMSCH_INSTANCE_ID='demo_pgsql_v1_'
 #EMSCH_TRANSLATION_TYPE='label'
 #EMSCH_ROUTE_TYPE='route'
 #EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
-###< EMSCommonBundle ###
+#EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/links/{type}.ems_link.twig'
+#EMSCH_TEMPLATE_ERROR='@EMSCH/template/views/error/error{code}.html.twig'
+###< EMSClientHelperBundle ###
 
 ###> EMSCoreBundle ###
 EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
@@ -61,7 +63,7 @@ EMSCO_INSTANCE_ID=elasticms_
 EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
 EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
 EMSCO_SINGLE_TYPE_INDEX=false
-EMSCO_THEME_COLOR='blue'
+EMSCO_THEME_COLOR='purple'
 #EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
 #EMSCO_DATEPICKER_FORMAT='dd/mm/yyyy'
 #EMSCO_DATEPICKER_WEEKSTART=1
