--- a/composer.json
+++ b/composer.json
@@ -58,16 +58,22 @@
         "symfony-cmf/routing": "^2.3",
         "symfony/asset": "^5.4",
         "symfony/cache": "^5.4",
+        "symfony/config": "^5.4",
         "symfony/console": "^5.4",
         "symfony/css-selector": "^5.4",
+        "symfony/dependency-injection": "^5.4",
         "symfony/dom-crawler": "^5.4",
         "symfony/dotenv": "^5.4",
+        "symfony/error-handler": "^5.4",
         "symfony/event-dispatcher": "^5.4",
         "symfony/expression-language": "^5.4",
+        "symfony/filesystem": "^5.4",
+        "symfony/finder": "^5.4",
         "symfony/flex": "^1.6",
         "symfony/form": "^5.4",
         "symfony/framework-bundle": "^5.4",
         "symfony/http-client": "^5.4",
+        "symfony/http-foundation": "^5.4",
         "symfony/intl": "^5.4",
         "symfony/ldap": "^5.4",
         "symfony/mailer": "^5.4",
@@ -75,8 +81,10 @@
         "symfony/monolog-bridge": "^5.4",
         "symfony/monolog-bundle": "^3.8",
         "symfony/options-resolver": "^5.4",
+        "symfony/password-hasher": "^5.4",
         "symfony/process": "^5.4",
         "symfony/property-access": "^5.4",
+        "symfony/property-info": "^5.4",
         "symfony/routing": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/security-bundle": "^5.4",
@@ -84,9 +92,13 @@
         "symfony/security-csrf": "^5.4",
         "symfony/serializer": "^5.4",
         "symfony/stopwatch": "^5.4",
+        "symfony/string": "^5.4",
         "symfony/translation": "^5.4",
+        "symfony/twig-bridge": "^5.4",
         "symfony/twig-bundle": "^5.4",
         "symfony/validator": "^5.4",
+        "symfony/var-dumper": "^5.4",
+        "symfony/var-exporter": "^5.4",
         "symfony/web-link": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/cache-extra": "^3.4",
@@ -115,7 +127,7 @@
         "rector/rector": "^0.14.8",
         "symfony/browser-kit": "^5.4",
         "symfony/debug-bundle": "^5.4",
-        "symfony/phpunit-bridge": "^6.1",
+        "symfony/phpunit-bridge": "^5.4",
         "symfony/test-pack": "^1.0",
         "symfony/web-profiler-bundle": "^5.4",
         "symplify/monorepo-builder": "^11.1",
