--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,7 +1,15 @@
 parameters:
     paths:
-        - %currentWorkingDirectory%/elasticms-*/src
-        - %currentWorkingDirectory%/EMS/*/src
+        - %currentWorkingDirectory%/elasticms-admin/src
+        - %currentWorkingDirectory%/elasticms-cli/src
+        - %currentWorkingDirectory%/elasticms-web/src
+        - %currentWorkingDirectory%/EMS/client-helper-bundle/src
+        - %currentWorkingDirectory%/EMS/common-bundle/src
+        - %currentWorkingDirectory%/EMS/core-bundle/src
+        - %currentWorkingDirectory%/EMS/form-bundle/src
+        - %currentWorkingDirectory%/EMS/helpers/src
+        - %currentWorkingDirectory%/EMS/submission-bundle/src
+        - %currentWorkingDirectory%/EMS/xliff/src
     excludePaths:
         - %currentWorkingDirectory%/vendor/*
         - %currentWorkingDirectory%/EMS/common-bundle/src/Resources/*
