chore(php81): fix phpunit test
1) EMS\CommonBundle\Tests\Unit\Common\SpreadsheetGeneratorTest::testConfigToExcel
LogicException: psr/simple-cache 3.0+ is not compatible with this version of symfony/cache. Please upgrade symfony/cache to 6.0+ or downgrade psr/simple-cache to 1.x or 2.x.

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,8 @@
         "ocramius/doctrine-batch-utils": "^2.5",
         "phpoffice/phpspreadsheet": "^1.16",
         "promphp/prometheus_client_php": "^2.6",
+        "psr/cache": "^2.0",
+        "psr/simple-cache": "^2.0",
         "ramsey/uuid-doctrine": "^1.8",
         "ruflin/elastica": "^7.2",
         "sensio/framework-extra-bundle": "^6.2",
