--- a/EMS/core-bundle/.gitattributes
+++ b/EMS/core-bundle/.gitattributes
@@ -19,6 +19,7 @@
 *.php text eol=lf
 *.inc text eol=lf
 *.twig text eol=lf
+*.env text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
