--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -91,7 +91,8 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": false
+      "allow-contrib": false,
+      "require": "^5.4"
     }
   }
 }
