feat(file-browser): add ux twig component

--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,7 @@
         "symfony/translation": "^5.4",
         "symfony/twig-bridge": "^5.4",
         "symfony/twig-bundle": "^5.4",
+        "symfony/ux-twig-component": "^2.6",
         "symfony/validator": "^5.4",
         "symfony/var-dumper": "^5.4",
         "symfony/var-exporter": "^5.4",
