--- a/EMS/core-bundle/composer.json
+++ b/EMS/core-bundle/composer.json
@@ -38,6 +38,7 @@
 		"symfony/monolog-bridge": "^5.4",
 		"symfony/security-bundle": "^5.4",
 		"symfony/twig-bundle": "^5.4",
+		"symfony/ux-twig-component": "^2.6",
 		"symfony/validator": "^5.4",
 		"symfony/web-link": "^5.4"
 	},
