feat: new copywriter role

--- a/EMS/core-bundle/tests/Integration/App/config/security.yaml
+++ b/EMS/core-bundle/tests/Integration/App/config/security.yaml
@@ -11,7 +11,8 @@ security:
     ROLE_REVIEWER:        ROLE_AUTHOR
     ROLE_TRADUCTOR:       ROLE_REVIEWER
     ROLE_AUDITOR:         ROLE_REVIEWER
-    ROLE_PUBLISHER:       ROLE_TRADUCTOR
+    ROLE_COPYWRITER:      ROLE_TRADUCTOR
+    ROLE_PUBLISHER:       ROLE_COPYWRITER
     ROLE_WEBMASTER:       ROLE_PUBLISHER
     ROLE_ADMIN:           [ROLE_WEBMASTER, ROLE_USER_MANAGEMENT]
     ROLE_SUPER_ADMIN:     ROLE_ADMIN
