--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -19,22 +19,9 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   es01:
-    image: elastic/elasticsearch:7.11.2
-    environment:
-      - node.name=es01
-      - cluster.name=es7-docker-cluster
-      - discovery.seed_hosts=es02,es03
-      - cluster.initial_master_nodes=es01,es02,es03
-      - cluster.routing.allocation.disk.threshold_enabled=false
-      - bootstrap.memory_lock=true
-      - node.store.allow_mmap=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data01:/usr/share/elasticsearch/data
+    extends:
+      file: docker-${ELK_VERSION-elk7}.yml
+      service: es01
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.es.rule=Host(`es.localhost`)"
@@ -42,22 +29,9 @@ services:
       - "traefik.http.routers.es.service=es"
       - "traefik.http.services.es.loadbalancer.server.port=9200"
   es02:
-    image: elastic/elasticsearch:7.11.2
-    environment:
-      - node.name=es02
-      - cluster.name=es7-docker-cluster
-      - discovery.seed_hosts=es01,es03
-      - cluster.initial_master_nodes=es01,es02,es03
-      - cluster.routing.allocation.disk.threshold_enabled=false
-      - bootstrap.memory_lock=true
-      - node.store.allow_mmap=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data02:/usr/share/elasticsearch/data
+    extends:
+      file: docker-${ELK_VERSION-elk7}.yml
+      service: es02
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.es.rule=Host(`es.localhost`)"
@@ -65,22 +39,9 @@ services:
       - "traefik.http.routers.es.service=es"
       - "traefik.http.services.es.loadbalancer.server.port=9200"
   es03:
-    image: elastic/elasticsearch:7.11.2
-    environment:
-      - node.name=es03
-      - cluster.name=es7-docker-cluster
-      - discovery.seed_hosts=es01,es02
-      - cluster.initial_master_nodes=es01,es02,es03
-      - cluster.routing.allocation.disk.threshold_enabled=false
-      - bootstrap.memory_lock=true
-      - node.store.allow_mmap=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data03:/usr/share/elasticsearch/data
+    extends:
+      file: docker-${ELK_VERSION-elk7}.yml
+      service: es03
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.es.rule=Host(`es.localhost`)"
@@ -89,11 +50,9 @@ services:
       - "traefik.http.services.es.loadbalancer.server.port=9200"
 
   kibana:
-    image: elastic/kibana:7.11.2
-    environment:
-      - TZ=Europe/Brussels
-      - ELASTICSEARCH_HOSTS=http://es01:9200
-      - SERVER_NAME=kibana.localhost
+    extends:
+      file: docker-${ELK_VERSION-elk7}.yml
+      service: kibana
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kibana.rule=Host(`kibana.localhost`)"
