--- a/demo/.env
+++ b/demo/.env
@@ -1,3 +1,6 @@
+# Project namespace (defaults to the current folder name if not set)
+COMPOSE_PROJECT_NAME=elasticms_demo
+
 EMS_VERSION=4.3
 INSTANCE_ID='demo_pgsql_v1_'
 EMS_BACKEND_URL=http://local.ems-demo-admin.localhost:9000
@@ -11,3 +14,25 @@ DB_SCHEMA_NAME=public
 DB_HOST=postgres
 
 S3_BUCKET_NAME=demo
+
+###> ELK8 variables ###
+# Password for the 'elastic' user (at least 6 characters)
+ELASTIC_PASSWORD=elasticms
+# Password for the 'kibana_system' user (at least 6 characters)
+KIBANA_PASSWORD=elasticms
+# Version of Elastic products
+STACK_VERSION=8.5.3
+# Set the cluster name
+CLUSTER_NAME=docker-cluster
+# Set to 'basic' or 'trial' to automatically start the 30-day trial
+LICENSE=basic
+#LICENSE=trial
+# Port to expose Elasticsearch HTTP API to the host
+ES_PORT=9200
+#ES_PORT=127.0.0.1:9200
+# Port to expose Kibana to the host
+KIBANA_PORT=5601
+#KIBANA_PORT=80
+# Increase or decrease based on the available host memory (in bytes)
+MEM_LIMIT=1073741824
+###< ELK8 variables ###
