--- a/demo/.env
+++ b/demo/.env
@@ -15,13 +15,18 @@ DB_HOST=postgres
 
 S3_BUCKET_NAME=demo
 
+###> ELK7 variables ###
+# Version of Elastic products
+ELK7_STACK_VERSION=7.11.2
+###< ELK7 variables ###
+
 ###> ELK8 variables ###
 # Password for the 'elastic' user (at least 6 characters)
 ELASTIC_PASSWORD=elasticms
 # Password for the 'kibana_system' user (at least 6 characters)
 KIBANA_PASSWORD=elasticms
 # Version of Elastic products
-STACK_VERSION=8.5.3
+ELK8_STACK_VERSION=8.5.3
 # Set the cluster name
 CLUSTER_NAME=docker-cluster
 # Set to 'basic' or 'trial' to automatically start the 30-day trial
