--- a/demo/docker-elk7.yml
+++ b/demo/docker-elk7.yml
@@ -1,6 +1,12 @@
 services:
+  setup_elk:
+    image: elastic/elasticsearch:${ELK8_STACK_VERSION}
+    command: >
+      bash -c '
+        echo "All done!";
+      '
   es01:
-    image: elastic/elasticsearch:7.11.2
+    image: elastic/elasticsearch:${ELK7_STACK_VERSION}
     environment:
       - node.name=es01
       - cluster.name=es7-docker-cluster
@@ -17,7 +23,7 @@ services:
     volumes:
       - elk7_data01:/usr/share/elasticsearch/data
   es02:
-    image: elastic/elasticsearch:7.11.2
+    image: elastic/elasticsearch:${ELK7_STACK_VERSION}
     environment:
       - node.name=es02
       - cluster.name=es7-docker-cluster
@@ -34,7 +40,7 @@ services:
     volumes:
       - elk7_data02:/usr/share/elasticsearch/data
   es03:
-    image: elastic/elasticsearch:7.11.2
+    image: elastic/elasticsearch:${ELK7_STACK_VERSION}
     environment:
       - node.name=es03
       - cluster.name=es7-docker-cluster
@@ -51,7 +57,7 @@ services:
     volumes:
       - elk7_data03:/usr/share/elasticsearch/data
   kibana:
-    image: elastic/kibana:7.11.2
+    image: elastic/kibana:${ELK7_STACK_VERSION}
     environment:
       - TZ=Europe/Brussels
       - ELASTICSEARCH_HOSTS=http://es01:9200
