--- a/demo/docker-elk8.yml
+++ b/demo/docker-elk8.yml
@@ -1,6 +1,6 @@
 services:
-  setup:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+  setup_elk:
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
       - elk8_certs:/usr/share/elasticsearch/config/certs
     user: "0"
@@ -62,9 +62,9 @@ services:
 
   es01:
     depends_on:
-      setup:
+      setup_elk:
         condition: service_healthy
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
       - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data01:/usr/share/elasticsearch/data
@@ -105,7 +105,7 @@ services:
   es02:
     depends_on:
       - es01
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
       - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data02:/usr/share/elasticsearch/data
@@ -145,7 +145,7 @@ services:
   es03:
     depends_on:
       - es02
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
       - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data03:/usr/share/elasticsearch/data
@@ -190,7 +190,7 @@ services:
         condition: service_healthy
       es03:
         condition: service_healthy
-    image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+    image: docker.elastic.co/kibana/kibana:${ELK8_STACK_VERSION}
     volumes:
       - elk8_certs:/usr/share/kibana/config/certs
       - elk8_kibanadata:/usr/share/kibana/data
