--- a/demo/docker-elk8.yml
+++ b/demo/docker-elk8.yml
@@ -1,77 +1,26 @@
 services:
   setup_elk:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
-    volumes:
-      - elk8_certs:/usr/share/elasticsearch/config/certs
     user: "0"
     command: >
       bash -c '
-        if [ x${ELASTIC_PASSWORD} == x ]; then
-          echo "Set the ELASTIC_PASSWORD environment variable in the .env file";
-          exit 1;
-        elif [ x${KIBANA_PASSWORD} == x ]; then
-          echo "Set the KIBANA_PASSWORD environment variable in the .env file";
-          exit 1;
-        fi;
-        if [ ! -f config/certs/ca.zip ]; then
-          echo "Creating CA";
-          bin/elasticsearch-certutil ca --silent --pem -out config/certs/ca.zip;
-          unzip config/certs/ca.zip -d config/certs;
-        fi;
-        if [ ! -f config/certs/certs.zip ]; then
-          echo "Creating certs";
-          echo -ne \
-          "instances:\n"\
-          "  - name: es01\n"\
-          "    dns:\n"\
-          "      - es01\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          "  - name: es02\n"\
-          "    dns:\n"\
-          "      - es02\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          "  - name: es03\n"\
-          "    dns:\n"\
-          "      - es03\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          > config/certs/instances.yml;
-          bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
-          unzip config/certs/certs.zip -d config/certs;
-        fi;
         echo "Setting file permissions"
-        chown -R root:root config/certs;
         find . -type d -exec chmod 750 \{\} \;;
         find . -type f -exec chmod 640 \{\} \;;
         echo "Waiting for Elasticsearch availability";
-        until curl -s --cacert config/certs/ca/ca.crt http://es01:9200 | grep -q "You Know, for Search"; do sleep 30; done;
+        until curl -s  http://es01:9200 | grep -q "You Know, for Search"; do sleep 30; done;
         echo "All done!";
       '
-    healthcheck:
-      test: ["CMD-SHELL", "[ -f config/certs/es01/es01.crt ]"]
-      interval: 1s
-      timeout: 5s
-      retries: 120
 
   es01:
-    depends_on:
-      setup_elk:
-        condition: service_healthy
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
-      - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data01:/usr/share/elasticsearch/data
     environment:
       - node.name=es01
       - cluster.name=${CLUSTER_NAME}
       - cluster.initial_master_nodes=es01,es02,es03
       - discovery.seed_hosts=es02,es03
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
       - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=false
@@ -84,10 +33,8 @@ services:
         hard: -1
     healthcheck:
       test:
-        [
-          "CMD-SHELL",
-          "curl -s http://localhost:9200 | grep -q 'You Know, for Search'",
-        ]
+        - "CMD-SHELL"
+        - "curl -s http://localhost:9200 | grep -q 'You Know, for Search'"
       interval: 10s
       timeout: 10s
       retries: 120
@@ -97,7 +44,6 @@ services:
       - es01
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
-      - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data02:/usr/share/elasticsearch/data
     environment:
       - node.name=es02
@@ -116,10 +62,8 @@ services:
         hard: -1
     healthcheck:
       test:
-        [
-          "CMD-SHELL",
-          "curl -s http://localhost:9200 | grep -q 'You Know, for Search'",
-        ]
+        - "CMD-SHELL"
+        - "curl -s http://localhost:9200 | grep -q 'You Know, for Search'"
       interval: 10s
       timeout: 10s
       retries: 120
@@ -129,7 +73,6 @@ services:
       - es02
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK8_STACK_VERSION}
     volumes:
-      - elk8_certs:/usr/share/elasticsearch/config/certs
       - elk8_data03:/usr/share/elasticsearch/data
     environment:
       - node.name=es03
@@ -148,10 +91,8 @@ services:
         hard: -1
     healthcheck:
       test:
-        [
-          "CMD-SHELL",
-          "curl -s http://localhost:9200 | grep -q 'You Know, for Search'",
-        ]
+        - "CMD-SHELL"
+        - "curl -s http://localhost:9200 | grep -q 'You Know, for Search'"
       interval: 10s
       timeout: 10s
       retries: 120
@@ -166,7 +107,6 @@ services:
         condition: service_healthy
     image: docker.elastic.co/kibana/kibana:${ELK8_STACK_VERSION}
     volumes:
-      - elk8_certs:/usr/share/kibana/config/certs
       - elk8_kibanadata:/usr/share/kibana/data
     environment:
       - SERVERNAME=kibana
@@ -174,10 +114,8 @@ services:
     mem_limit: ${MEM_LIMIT}
     healthcheck:
       test:
-        [
-          "CMD-SHELL",
-          "curl -s -I http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'",
-        ]
+        - "CMD-SHELL"
+        - "curl -s -I http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'"
       interval: 10s
       timeout: 10s
       retries: 120
