--- a/demo/.env
+++ b/demo/.env
@@ -1,7 +1,7 @@
 # Project namespace (defaults to the current folder name if not set)
 COMPOSE_PROJECT_NAME=elasticms_demo
 
-EMS_VERSION=4.3
+EMS_VERSION=5
 INSTANCE_ID='demo_pgsql_v1_'
 EMS_BACKEND_URL=http://local.ems-demo-admin.localhost:9000
 EMS_ADMIN_URL=http://local.ems-demo-admin.localhost
@@ -15,23 +15,27 @@ DB_HOST=postgres
 
 S3_BUCKET_NAME=demo
 
+###> Cluster's variables ###
+# Set the cluster name
+CLUSTER_NAME=ems-cluster
+# Increase or decrease based on the available host memory (in bytes)
+MEM_LIMIT=1073741824
+###< Cluster's variables ###
+
 ###> ELK7 variables ###
 # Version of Elastic products
 ELK7_STACK_VERSION=7.11.2
 ###< ELK7 variables ###
 
+###> OpenSearch 2 variables ###
+# Version of Elastic products
+OS2_STACK_VERSION=2.4.1
+###< ELK7 variables ###
+
 ###> ELK8 variables ###
-# Password for the 'elastic' user (at least 6 characters)
-ELASTIC_PASSWORD=elasticms
-# Password for the 'kibana_system' user (at least 6 characters)
-KIBANA_PASSWORD=elasticms
 # Version of Elastic products
 ELK8_STACK_VERSION=8.5.3
-# Set the cluster name
-CLUSTER_NAME=docker-cluster
 # Set to 'basic' or 'trial' to automatically start the 30-day trial
-LICENSE=basic
-#LICENSE=trial
-# Increase or decrease based on the available host memory (in bytes)
-MEM_LIMIT=1073741824
+ELK8_LICENSE=basic
+#ELK8_LICENSE=trial
 ###< ELK8 variables ###
