--- a/demo/docker-elasticms.yml
+++ b/demo/docker-elasticms.yml
@@ -35,6 +35,8 @@ services:
       - ./configs/elasticms-admin:/opt/configs
       - ./configs/admin:/opt/src/admin
       - ./configs/document:/opt/src/document
+      #- ../EMS/core-bundle:/opt/src/vendor/elasticms/core-bundle
+      #- ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
 
   web:
     image: elasticms/website-skeleton:${EMS_VERSION}
@@ -68,3 +70,4 @@ services:
       - ./configs/document:/opt/src/document
       - ./skeleton:/opt/src/local/${INSTANCE_ID}preview
       - ./skeleton:/opt/src/local/${INSTANCE_ID}live
+      #- ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
