--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -17,6 +17,7 @@
         "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.6",
         "symfony/framework-bundle": "^5.4",
+        "symfony/property-info": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/yaml": "^5.4"
     },
