--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -22,6 +22,7 @@
         "symfony/yaml": "^5.4"
     },
     "require-dev": {
+      "phpdocumentor/reflection-docblock": "^5.3",
       "phpunit/phpunit": "^9.5"
     },
     "config": {
