--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -17,10 +17,12 @@
         "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.6",
         "symfony/framework-bundle": "^5.4",
+        "symfony/property-info": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/yaml": "^5.4"
     },
     "require-dev": {
+      "phpdocumentor/reflection-docblock": "^5.3",
       "phpunit/phpunit": "^9.5"
     },
     "config": {
