ref: don't call rector in phpall (too heavy)

--- a/composer.json
+++ b/composer.json
@@ -172,7 +172,7 @@
         "phpcs": "php-cs-fixer fix",
         "phpstan": "phpstan analyse --memory-limit 1G",
         "phpunit": "phpunit",
-        "phpall": "rector && php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
+        "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
     },
     "extra": {
         "symfony": {
