--- a/EMS/common-bundle/composer.json
+++ b/EMS/common-bundle/composer.json
@@ -30,6 +30,7 @@
 		"guzzlehttp/guzzle": "^6.3",
 		"phpoffice/phpspreadsheet": "^1.16",
 		"promphp/prometheus_client_php": "^2.6",
+		"psr/simple-cache": "^2.0",
 		"ramsey/uuid-doctrine": "^1.8",
 		"ruflin/elastica": "^7.2",
 		"symfony/console": "^5.4",
