fix(cli): require doctrine annotations

--- a/EMS/common-bundle/composer.json
+++ b/EMS/common-bundle/composer.json
@@ -23,7 +23,8 @@
 		"ext-zip": "*",
 		"aws/aws-sdk-php": "^3.109",
 		"cebe/markdown": "^1.2",
-		"doctrine/doctrine-bundle": "^2.7",
+		"doctrine/annotations": "^1.14",
+		"doctrine/doctrine-bundle": "^2.8",
 		"doctrine/orm": "^2.6",
 		"dompdf/dompdf": "^v2.0",
 		"elasticms/helpers": "^5.0",
