--- a/EMS/core-bundle/composer.json
+++ b/EMS/core-bundle/composer.json
@@ -20,7 +20,8 @@
 		"ext-simplexml": "*",
 		"ext-soap": "*",
 		"caxy/php-htmldiff": "^0.1",
-		"doctrine/doctrine-bundle": "^2.7",
+		"doctrine/annotations": "^1.14",
+		"doctrine/doctrine-bundle": "^2.8",
 		"doctrine/doctrine-migrations-bundle": "^3.2",
 		"dragonmantank/cron-expression": "^3.1",
 		"elasticms/submission-bundle": "^5.0",
