--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -19,7 +19,8 @@
     "ext-json": "*",
     "ext-openssl": "*",
     "ext-tidy": "*",
-    "doctrine/doctrine-bundle": "^2.7",
+    "doctrine/annotations": "^1.14",
+    "doctrine/doctrine-bundle": "^2.8",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.6",
     "elasticms/core-bundle": "^5.0",
