--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "caxy/php-htmldiff": "^0.1",
         "cebe/markdown": "^1.2",
         "composer/ca-bundle": "^1.1",
-        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/annotations": "^1.14",
+        "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.6",
         "dompdf/dompdf": "^v2.0",
