--- a/elasticms-web/composer.json
+++ b/elasticms-web/composer.json
@@ -3,7 +3,8 @@
     "license": "proprietary",
     "require": {
         "php": "^8.1",
-        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/annotations": "^1.14",
+        "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.6",
         "elasticms/client-helper-bundle": "^5.0",
