--- a/EMS/xliff/composer.json
+++ b/EMS/xliff/composer.json
@@ -8,13 +8,10 @@
 		"xliff"
 	],
 	"license" : "MIT",
-	"authors" : [{
-			"name" : "David Mattei",
-			"email" : "david.mattei@smals.be"
-		},
+	"authors" : [
 		{
-			"name" : "Mathieu De Keyzer",
-			"email" : "mathieu@dekeyzer.net"
+			"name" : "EMS Community",
+			"homepage" : "https://github.com/ems-project/xliff/contributors"
 		}
 	],
 	"require" : {
