--- a/elasticms-web/composer.json
+++ b/elasticms-web/composer.json
@@ -1,6 +1,6 @@
 {
     "type": "project",
-    "license": "proprietary",
+    "license" : "MIT",
     "require": {
         "php": "^8.1",
         "doctrine/annotations": "^1.14",
