feat(html): require symfony html-sanitizer

--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -17,7 +17,8 @@
 	"require" : {
 		"php": "^8.1",
         "ext-json": "*",
-        "ext-tidy": "*"
+        "ext-tidy": "*",
+		"symfony/html-sanitizer": "^6.2"
 	},
 	"require-dev" : {
 		"mockery/mockery" : "^0.9",
