--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
         "symfony/flex": "^1.6",
         "symfony/form": "^5.4",
         "symfony/framework-bundle": "^5.4",
+        "symfony/html-sanitizer": "^6.2",
         "symfony/http-client": "^5.4",
         "symfony/http-foundation": "^5.4",
         "symfony/intl": "^5.4",
