feat(sanitize): add html standard with sanitizer

--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -18,7 +18,8 @@
 		"php": "^8.1",
         "ext-json": "*",
         "ext-tidy": "*",
-		"symfony/html-sanitizer": "^6.2"
+		"symfony/html-sanitizer": "^6.2",
+		"symfony/options-resolver": "^5.4",
 	},
 	"require-dev" : {
 		"mockery/mockery" : "^0.9",
