--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -16,8 +16,10 @@
 	],
 	"require" : {
 		"php": "^8.1",
-        "ext-json": "*",
-        "ext-tidy": "*"
+		"ext-json": "*",
+		"ext-tidy": "*",
+		"symfony/html-sanitizer": "^6.2",
+		"symfony/options-resolver": "^5.4"
 	},
 	"require-dev" : {
 		"mockery/mockery" : "^0.9",
