--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -1,12 +1,12 @@
 # Project namespace (defaults to the current folder name if not set)
-COMPOSE_PROJECT_NAME=elasticms_docker
+COMPOSE_PROJECT_NAME=ems-mono
 
 # Search stack's version
 # Possible values:
 # * elk7: Elasticsearch 7: default value
 # * elk8: Elasticsearch 8
 # * os2: OpenSearch 2
-#ELK_VERSION=elk8
+ELK_VERSION=elk7
 
 ###> Cluster's variables ###
 # Set the cluster name
