--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -19,7 +19,7 @@ REDIS_PORT=6379
 ###< Redis ###
 
 ###> EMSCommonBundle ###
-EMS_ELASTICSEARCH_HOSTS='["http://es01.localhost", "http://es02.localhost", "http://es03.localhost"]'
+EMS_ELASTICSEARCH_HOSTS='["http://es.localhost"]'
 EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
 EMS_CACHE=file_system
 EMS_CACHE_PREFIX=''
