add: tika download url

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -43,6 +43,7 @@ EMSCH_LOCALES='["en","fr","nl"]'
 
 ###> EMSCoreBundle ###
 EMSCO_TIKA_SERVER='http://tika.localhost'
+EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
 EMSCO_INSTANCE_ID=elasticms_
 EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
 EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
