--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -1,7 +1,3 @@
-# This file is a "template" of which env vars need to be defined for your application
-# Copy this file to .env file for development, create environment variables when deploying to production
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=7b19a4a6e37b9303e4f6bca1dc6691ed
@@ -14,16 +10,7 @@ MAILER_URL=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Configure your db driver and server_version in config/packages/doctrine.yaml
-# elasticms supports currently 3 RDBMS: pgsql, mysql and sqlite
-# Pgsql default port 5432, mysql default port 3306s
-DB_DRIVER='pgsql'
-DB_USER='demo'
-DB_PASSWORD='demo'
-DB_PORT='5432'
-DB_NAME='demo'
+DB_URL="pgsql://demo:demo@127.0.0.1:5432/demo"
 ###< doctrine/doctrine-bundle ###
 
 ###> Redis ###
@@ -32,7 +19,7 @@ REDIS_PORT=6379
 ###< Redis ###
 
 ###> EMSCommonBundle ###
-EMS_ELASTICSEARCH_HOSTS='["http://localhost:9200"]'
+EMS_ELASTICSEARCH_HOSTS='["http://es.localhost"]'
 EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
 EMS_CACHE=file_system
 EMS_CACHE_PREFIX=''
@@ -55,14 +42,11 @@ EMSCH_LOCALES='["en","fr","nl"]'
 ###< EMSClientHelperBundle ###
 
 ###> EMSCoreBundle ###
+EMSCO_TIKA_SERVER='http://tika.localhost'
 EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
-EMSCO_TIKA_SERVER='http://localhost:9998'
-EMSCO_PRIVATE_KEY=
-EMSCO_PUBLIC_KEY=
 EMSCO_INSTANCE_ID=elasticms_
 EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
 EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
-EMSCO_SINGLE_TYPE_INDEX=false
 EMSCO_THEME_COLOR='purple'
 #EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
 #EMSCO_DATEPICKER_FORMAT='dd/mm/yyyy'
