--- a/EMS/core-bundle/src/Resources/public/manifest.json
+++ b/EMS/core-bundle/src/Resources/public/manifest.json
@@ -168,6 +168,7 @@
   "media/glyphicons-halflings-regular.woff2": "bundles/emscore/media/glyphicons-halflings-regular.woff2",
   "js/ckeditor/lang/th.js": "bundles/emscore/js/ckeditor/lang/th.js",
   "images/logo.png": "bundles/emscore/images/logo.png",
+  "images/logo.svg": "bundles/emscore/images/logo.svg",
   "js/ckeditor/lang/uk.js": "bundles/emscore/js/ckeditor/lang/uk.js",
   "js/ace/mode-perl6.js": "bundles/emscore/js/ace/mode-perl6.js",
   "js/ckeditor/lang/el.js": "bundles/emscore/js/ckeditor/lang/el.js",
