--- a/elasticms-admin/.gitignore
+++ b/elasticms-admin/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> elasticms/client-helper-bundle ###
+/local
+###< elasticms/client-helper-bundle ###
+
