feat: EMS_ELASTICSEARCH_CONNECTION_POOL

--- a/elasticms-admin/config/packages/ems_common.yaml
+++ b/elasticms-admin/config/packages/ems_common.yaml
@@ -15,6 +15,7 @@ parameters:
 
     #Parameters
     env(EMS_HASH_ALGO): 'sha1'
+    env(EMS_ELASTICSEARCH_CONNECTION_POOL): ~
     env(EMS_ELASTICSEARCH_HOSTS): '%env(ELASTICSEARCH_CLUSTER)%'
     env(EMS_STORAGES): '[{"type":"fs","path":"%env(STORAGE_FOLDER)%"},{"type":"s3","credentials":%env(S3_CREDENTIALS)%,"bucket":"%env(S3_BUCKET)%"},{"type":"db","activate":%env(EMS_SAVE_ASSETS_IN_DB)%},{"type":"http","base-url":"%env(EMS_EMS_REMOTE_SERVER)%","auth-key":"%env(EMS_EMS_REMOTE_AUTHKEY)%"},{"type":"sftp","host":"%env(EMS_SFTP_SERVEUR)%","path":"%env(EMS_SFTP_PATH)%","username":"%env(EMS_SFTP_USER)%","public-key-file":"%env(EMS_PUBLIC_KEY)%","private-key-file":"%env(EMS_PRIVATE_KEY)%"}]'
     env(EMS_LOG_LEVEL): '250'
@@ -33,6 +34,7 @@ parameters:
 
 ems_common:
     hash_algo: '%env(string:EMS_HASH_ALGO)%'
+    elasticsearch_connection_pool: '%env(string:EMS_ELASTICSEARCH_CONNECTION_POOL)%'
     elasticsearch_hosts: '%env(json:EMS_ELASTICSEARCH_HOSTS)%'
     storages: '%env(json:EMS_STORAGES)%'
     log_level: '%env(int:EMS_LOG_LEVEL)%'
