--- a/elasticms-cli/config/packages/ems_common.yaml
+++ b/elasticms-cli/config/packages/ems_common.yaml
@@ -2,6 +2,7 @@ parameters:
   #Parameters
   env(EMS_HASH_ALGO): 'sha1'
   env(EMS_STORAGES): '[{"type":"fs","path":""}]'
+  env(EMS_ELASTICSEARCH_CONNECTION_POOL): ~
   env(EMS_ELASTICSEARCH_HOSTS): '["http://localhost:9200"]'
   env(EMS_BACKEND_URL): ~
   env(EMS_BACKEND_API_KEY): ~
@@ -14,6 +15,7 @@ parameters:
 
 ems_common:
   hash_algo: '%env(string:EMS_HASH_ALGO)%'
+  elasticsearch_connection_pool: '%env(string:EMS_ELASTICSEARCH_CONNECTION_POOL)%'
   elasticsearch_hosts: '%env(json:EMS_ELASTICSEARCH_HOSTS)%'
   storages: '%env(json:EMS_STORAGES)%'
   backend_url: '%env(string:EMS_BACKEND_URL)%'
