feat(web): environment var EMSCH_LOCAL_PATH

--- a/elasticms-admin/config/packages/ems_client_helper.yaml
+++ b/elasticms-admin/config/packages/ems_client_helper.yaml
@@ -20,6 +20,7 @@ parameters:
   env(EMSCH_BACKEND_API_KEY):         ~
   env(EMSCH_ASSET_LOCAL_FOLDER):      ~
   env(EMSCH_SEARCH_LIMIT):            '1000'
+  env(EMSCH_LOCAL_PATH):              ~
 
 ems_client_helper:
   api:
@@ -49,4 +50,5 @@ ems_client_helper:
 
 when@dev:
   ems_client_helper:
-    local: true
+    local:
+      path: '%env(string:EMSCH_LOCAL_PATH)%'
