feat: new EMSCO_CUSTOM_USER_OPTIONS_FORM admin's envvar

--- a/elasticms-admin/config/packages/ems_core.yaml
+++ b/elasticms-admin/config/packages/ems_core.yaml
@@ -54,6 +54,7 @@ parameters:
     env(EMSCO_PRE_GENERATED_OUUIDS): false
     env(EMSCO_DEFAULT_BULK_SIZE): 500
     env(EMSCO_URL_USER): ~
+    env(EMSCO_CUSTOM_USER_OPTIONS_FORM): ~
 
     env(EMSCO_LDAP_ENABLED): true
     env(EMSCO_LDAP_DN_STRING): '%env(string:LDAP_DN_STRING)%'
@@ -92,6 +93,7 @@ ems_core:
     pre_generated_ouuids: '%env(bool:EMSCO_PRE_GENERATED_OUUIDS)%'
     default_bulk_size: '%env(int:EMSCO_DEFAULT_BULK_SIZE)%'
     url_user: '%env(string:EMSCO_URL_USER)%'
+    custom_user_options_form: '%env(string:EMSCO_CUSTOM_USER_OPTIONS_FORM)%'
 
     ldap:
         enabled: '%env(bool:EMSCO_LDAP_ENABLED)%'
