doc: optional ways of db connection info

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -10,6 +10,13 @@ MAILER_URL=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
+#DB_HOST='127.0.0.1'
+#DB_DRIVER='mysql'
+#DB_USER='root'
+#DB_PASSWORD='mariadb'
+#DB_PORT='3306'
+#DB_NAME='demo'
+#DB_URL="mysql://root:mariadb@127.0.0.1:3306/demo?serverVersion=mariadb-10.4.11"
 DB_URL="pgsql://demo:demo@127.0.0.1:5432/demo"
 ###< doctrine/doctrine-bundle ###
 
@@ -61,6 +68,7 @@ EMSCO_FROM_EMAIL_NAME='elasticms'
 #EMS_CIRCLES_OBJECT=''
 #EMSCO_PRE_GENERATED_OUUIDS=false
 #EMSCO_URL_USER=''
+EMSCO_CUSTOM_USER_OPTIONS_FORM='user'
 ###< EMSCoreBundle ###
 
 ###> elasticms/form-bundle ###
