fix(admin/migrations): add env ELASTICMS_PATH
Default value is admin vendor installed

--- a/elasticms-admin/config/packages/framework.yaml
+++ b/elasticms-admin/config/packages/framework.yaml
@@ -1,5 +1,6 @@
 parameters:
     env(DEFAULT_LOCAL): 'en'
+    env(ELASTICMS_PATH): '%kernel.project_dir%/vendor/elasticms'
 
 framework:
     secret: '%env(APP_SECRET)%'
