fix(admin/migrations): use new ELASTICMS_PATH env

--- a/elasticms-admin/config/packages/doctrine_migrations.yaml
+++ b/elasticms-admin/config/packages/doctrine_migrations.yaml
@@ -1,6 +1,6 @@
 doctrine_migrations:
     migrations_paths:
-        Application\Migrations: '%kernel.project_dir%/vendor/elasticms/core-bundle/src/Resources/DoctrineMigrations/pdo_%env(resolve:DB_DRIVER)%'
+        Application\Migrations: '%env(string:ELASTICMS_PATH)%/core-bundle/src/Resources/DoctrineMigrations/pdo_%env(resolve:DB_DRIVER)%'
     storage:
         table_storage:
             table_name: 'migration_versions'
@@ -11,4 +11,4 @@ doctrine_migrations:
 when@dev:
   doctrine_migrations:
     migrations_paths:
-      Application\Migrations: '%kernel.project_dir%/../EMS/core-bundle/src/Resources/DoctrineMigrations/pdo_%env(resolve:DB_DRIVER)%'
+      Application\Migrations: '%env(string:ELASTICMS_PATH)%/core-bundle/src/Resources/DoctrineMigrations/pdo_%env(resolve:DB_DRIVER)%'
